# pick_and_place_pcl

./: README.md
data/: boxp.pcd  wmp.pcd  womp.pcd
pc_processing/: CMakeLists.txt  extract_indices.cpp  find_normals.cpp  find_table.cpp  passthrough.cpp  planar_segmentation.cpp  random_sample_consensus.cpp  read_pcd.cpp  visualize_pcd.cpp
visual_servoing/vision_based_manipulation/: CMakeLists.txt
visual_servoing/vision_based_manipulation/launch/: vb_publish_joint_pose_and_vel.launch
visual_servoing/vision_based_manipulation/scripts/: switch_controllers.py  visual_servoing.py
visual_servoing/vision_based_manipulation/urdf/: vbmbot.xacro
